--- a/EDA & visualization/Store_Data.ipynb
+++ b/EDA & visualization/Store_Data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,6 +937,513 @@
     "#### 강남8학군 등 학군이 좋다는 말이 나오는 서울이 역시 학문/교육 관련 상권이 크게 형성 되어있다. 같은 업종으로 부산보다 약 두 배 이상 크다.\n",
     "#### 스포츠 영역은 확실히 서울이나 부산이나 비중이 가장 작다. 그래프에서 보이지 않을 정도이다.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Store_Data.ipynb',\n",
+       " '소상공인시장진흥공단_상가업소정보_201806_01.csv',\n",
+       " '소상공인시장진흥공단_상가업소정보_201806_02.csv',\n",
+       " '소상공인시장진흥공단_상가업소정보_201806_03.csv',\n",
+       " '소상공인시장진흥공단_상가업소정보_201806_04.csv']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "\n",
+    "files = [i for i in listdir('./') if isfile(join('./', i))]\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>상가업소번호</th>\n",
+       "      <th>상호명</th>\n",
+       "      <th>지점명</th>\n",
+       "      <th>상권업종대분류코드</th>\n",
+       "      <th>상권업종대분류명</th>\n",
+       "      <th>상권업종중분류코드</th>\n",
+       "      <th>상권업종중분류명</th>\n",
+       "      <th>상권업종소분류코드</th>\n",
+       "      <th>상권업종소분류명</th>\n",
+       "      <th>표준산업분류코드</th>\n",
+       "      <th>...</th>\n",
+       "      <th>건물관리번호</th>\n",
+       "      <th>건물명</th>\n",
+       "      <th>도로명주소</th>\n",
+       "      <th>구우편번호</th>\n",
+       "      <th>신우편번호</th>\n",
+       "      <th>동정보</th>\n",
+       "      <th>층정보</th>\n",
+       "      <th>호정보</th>\n",
+       "      <th>경도</th>\n",
+       "      <th>위도</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28482781</td>\n",
+       "      <td>가향</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>음식</td>\n",
+       "      <td>Q03</td>\n",
+       "      <td>일식/수산물</td>\n",
+       "      <td>Q03A02</td>\n",
+       "      <td>음식점-일식</td>\n",
+       "      <td>I56113</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2917010700113970005045297</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>광주광역시 북구 저불로31번길 4-1</td>\n",
+       "      <td>500846</td>\n",
+       "      <td>61110.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126.894710</td>\n",
+       "      <td>35.177430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28495010</td>\n",
+       "      <td>스퀘어모텔</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>O</td>\n",
+       "      <td>숙박</td>\n",
+       "      <td>O02</td>\n",
+       "      <td>모텔/여관/여인숙</td>\n",
+       "      <td>O02A01</td>\n",
+       "      <td>모텔/여관/여인숙</td>\n",
+       "      <td>I55112</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2914011900100230011024416</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>광주광역시 서구 내방로353번길 6</td>\n",
+       "      <td>502240</td>\n",
+       "      <td>61938.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126.879708</td>\n",
+       "      <td>35.157850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28485067</td>\n",
+       "      <td>독도회</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>음식</td>\n",
+       "      <td>Q03</td>\n",
+       "      <td>일식/수산물</td>\n",
+       "      <td>Q03A01</td>\n",
+       "      <td>횟집</td>\n",
+       "      <td>I56111</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2771025021102350000002739</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>대구광역시 달성군 화원읍 사문진로 425</td>\n",
+       "      <td>711834</td>\n",
+       "      <td>42954.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>128.495730</td>\n",
+       "      <td>35.804874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28508970</td>\n",
+       "      <td>돌고래펜션</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>O</td>\n",
+       "      <td>숙박</td>\n",
+       "      <td>O03</td>\n",
+       "      <td>캠프/별장/펜션</td>\n",
+       "      <td>O03A01</td>\n",
+       "      <td>캠프/별장/펜션</td>\n",
+       "      <td>I55119</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2872036023105910029010066</td>\n",
+       "      <td>상가</td>\n",
+       "      <td>인천광역시 옹진군 영흥면 선재로226번길 54</td>\n",
+       "      <td>409872</td>\n",
+       "      <td>23122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126.523055</td>\n",
+       "      <td>37.250135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28491156</td>\n",
+       "      <td>라비타</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>음식</td>\n",
+       "      <td>Q12</td>\n",
+       "      <td>커피점/카페</td>\n",
+       "      <td>Q12A01</td>\n",
+       "      <td>커피전문점/카페/다방</td>\n",
+       "      <td>I56220</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3017010300101100010025915</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>대전광역시 서구 도솔4길 16</td>\n",
+       "      <td>302160</td>\n",
+       "      <td>35338.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>127.372459</td>\n",
+       "      <td>36.316913</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     상가업소번호    상호명  지점명 상권업종대분류코드 상권업종대분류명 상권업종중분류코드   상권업종중분류명 상권업종소분류코드  \\\n",
+       "0  28482781     가향  NaN         Q       음식       Q03     일식/수산물    Q03A02   \n",
+       "1  28495010  스퀘어모텔  NaN         O       숙박       O02  모텔/여관/여인숙    O02A01   \n",
+       "2  28485067    독도회  NaN         Q       음식       Q03     일식/수산물    Q03A01   \n",
+       "3  28508970  돌고래펜션  NaN         O       숙박       O03   캠프/별장/펜션    O03A01   \n",
+       "4  28491156    라비타  NaN         Q       음식       Q12     커피점/카페    Q12A01   \n",
+       "\n",
+       "      상권업종소분류명 표준산업분류코드    ...                         건물관리번호  건물명  \\\n",
+       "0       음식점-일식   I56113    ...      2917010700113970005045297  NaN   \n",
+       "1    모텔/여관/여인숙   I55112    ...      2914011900100230011024416  NaN   \n",
+       "2           횟집   I56111    ...      2771025021102350000002739  NaN   \n",
+       "3     캠프/별장/펜션   I55119    ...      2872036023105910029010066   상가   \n",
+       "4  커피전문점/카페/다방   I56220    ...      3017010300101100010025915  NaN   \n",
+       "\n",
+       "                       도로명주소   구우편번호    신우편번호  동정보  층정보  호정보          경도  \\\n",
+       "0       광주광역시 북구 저불로31번길 4-1  500846  61110.0  NaN    1  NaN  126.894710   \n",
+       "1        광주광역시 서구 내방로353번길 6  502240  61938.0  NaN    2  NaN  126.879708   \n",
+       "2     대구광역시 달성군 화원읍 사문진로 425  711834  42954.0  NaN    1  NaN  128.495730   \n",
+       "3  인천광역시 옹진군 영흥면 선재로226번길 54  409872  23122.0  NaN  NaN  NaN  126.523055   \n",
+       "4           대전광역시 서구 도솔4길 16  302160  35338.0  NaN    1  NaN  127.372459   \n",
+       "\n",
+       "          위도  \n",
+       "0  35.177430  \n",
+       "1  35.157850  \n",
+       "2  35.804874  \n",
+       "3  37.250135  \n",
+       "4  36.316913  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_inf2 = pd.read_csv('소상공인시장진흥공단_상가업소정보_201806_02.csv', engine='python')\n",
+    "store_inf2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(447077, 39)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(store_inf2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "상가업소번호\n",
+      "상호명\n",
+      "지점명\n",
+      "상권업종대분류코드\n",
+      "상권업종대분류명\n",
+      "상권업종중분류코드\n",
+      "상권업종중분류명\n",
+      "상권업종소분류코드\n",
+      "상권업종소분류명\n",
+      "표준산업분류코드\n",
+      "표준산업분류명\n",
+      "시도코드\n",
+      "시도명\n",
+      "시군구코드\n",
+      "시군구명\n",
+      "행정동코드\n",
+      "행정동명\n",
+      "법정동코드\n",
+      "법정동명\n",
+      "지번코드\n",
+      "대지구분코드\n",
+      "대지구분명\n",
+      "지번본번지\n",
+      "지번부번지\n",
+      "지번주소\n",
+      "도로명코드\n",
+      "도로명\n",
+      "건물본번지\n",
+      "건물부번지\n",
+      "건물관리번호\n",
+      "건물명\n",
+      "도로명주소\n",
+      "구우편번호\n",
+      "신우편번호\n",
+      "동정보\n",
+      "층정보\n",
+      "호정보\n",
+      "경도\n",
+      "위도\n"
+     ]
+    }
+   ],
+   "source": [
+    "sic2 = store_inf2.columns\n",
+    "for i in sic2:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "상권업종대분류명  시도명    \n",
+       "관광/여가/오락  광주광역시       2292\n",
+       "          대구광역시       3084\n",
+       "          대전광역시       2596\n",
+       "          세종특별자치시      172\n",
+       "          울산광역시       1632\n",
+       "          인천광역시       3928\n",
+       "부동산       광주광역시       2373\n",
+       "          대구광역시       3152\n",
+       "          대전광역시       2345\n",
+       "          세종특별자치시      691\n",
+       "          울산광역시       1361\n",
+       "          인천광역시       4562\n",
+       "생활서비스     광주광역시      12754\n",
+       "          대구광역시      17938\n",
+       "          대전광역시      12521\n",
+       "          세종특별자치시     1209\n",
+       "          울산광역시       7617\n",
+       "          인천광역시      20315\n",
+       "소매        광주광역시      26052\n",
+       "          대구광역시      36754\n",
+       "          대전광역시      26762\n",
+       "          세종특별자치시     2374\n",
+       "          울산광역시      15003\n",
+       "          인천광역시      38995\n",
+       "숙박        광주광역시        696\n",
+       "          대구광역시        863\n",
+       "          대전광역시        824\n",
+       "          세종특별자치시       75\n",
+       "          울산광역시        704\n",
+       "          인천광역시       1597\n",
+       "스포츠       광주광역시          7\n",
+       "          대구광역시         19\n",
+       "          대전광역시         19\n",
+       "          세종특별자치시        2\n",
+       "          울산광역시          7\n",
+       "          인천광역시         11\n",
+       "음식        광주광역시      23621\n",
+       "          대구광역시      36498\n",
+       "          대전광역시      25895\n",
+       "          세종특별자치시     3882\n",
+       "          울산광역시      17659\n",
+       "          인천광역시      36645\n",
+       "의료        광주광역시       2672\n",
+       "          대구광역시       3996\n",
+       "          대전광역시       2671\n",
+       "          세종특별자치시      276\n",
+       "          울산광역시       1527\n",
+       "          인천광역시       3792\n",
+       "학문/교육     광주광역시       7144\n",
+       "          대구광역시       8712\n",
+       "          대전광역시       6426\n",
+       "          세종특별자치시      569\n",
+       "          울산광역시       4408\n",
+       "          인천광역시       9378\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_inf2.groupby(['상권업종대분류명', '시도명']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4개의 파일은 아마도 지역별로 나뉘어 있는 거 같다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_inf3 = pd.read_csv('소상공인시장진흥공단_상가업소정보_201806_03.csv', engine='python')\n",
+    "store_inf4 = pd.read_csv('소상공인시장진흥공단_상가업소정보_201806_04.csv', engine='python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['부산광역시', '서울특별시'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store_inf['시도명'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 파일 :  ['부산광역시' '서울특별시']\n",
+      "2번 파일 :  ['광주광역시' '대구광역시' '인천광역시' '대전광역시' '울산광역시' '세종특별자치시']\n",
+      "3번 파일 :  ['경기도' '강원도' '충청북도']\n",
+      "4번 파일 :  ['경상남도' '충청남도' '전라남도' '경상북도' '전라북도' '제주특별자치도']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"1번 파일 : \", store_inf['시도명'].unique())\n",
+    "print(\"2번 파일 : \", store_inf2['시도명'].unique())\n",
+    "print(\"3번 파일 : \", store_inf3['시도명'].unique())\n",
+    "print(\"4번 파일 : \", store_inf4['시도명'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4개의 파일에 있는 '시도명' 거의 전국의 도가 다 존재한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 파일 :  서울특별시    330089\n",
+      "부산광역시    146094\n",
+      "Name: 시도명, dtype: int64\n",
+      " \n",
+      "2번 파일 :  인천광역시      119223\n",
+      "대구광역시      111016\n",
+      "대전광역시       80059\n",
+      "광주광역시       77611\n",
+      "울산광역시       49918\n",
+      "세종특별자치시      9250\n",
+      "Name: 시도명, dtype: int64\n",
+      " \n",
+      "3번 파일 :  경기도     557227\n",
+      "강원도     109060\n",
+      "충청북도     86827\n",
+      "Name: 시도명, dtype: int64\n",
+      " \n",
+      "4번 파일 :  경상남도       161911\n",
+      "경상북도       136444\n",
+      "충청남도       114109\n",
+      "전라남도       113799\n",
+      "전라북도       113417\n",
+      "제주특별자치도     40861\n",
+      "Name: 시도명, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"1번 파일 : \", store_inf['시도명'].value_counts())\n",
+    "print(\" \")\n",
+    "print(\"2번 파일 : \", store_inf2['시도명'].value_counts())\n",
+    "print(\" \")\n",
+    "print(\"3번 파일 : \", store_inf3['시도명'].value_counts())\n",
+    "print(\" \")\n",
+    "print(\"4번 파일 : \", store_inf4['시도명'].value_counts())"
    ]
   },
   {
